1.21 port (buggy netcode)